dark mode and post ui fix

--- a/_sass/tale/_base.scss
+++ b/_sass/tale/_base.scss
@@ -23,6 +23,8 @@ html {
 
 body {
   -webkit-text-size-adjust: 100%;
+  background-color: #121212;
+  font-weight: 400;
 }
 
 h1,
@@ -34,6 +36,8 @@ h6 {
   color: $default-shade;
   font-family: $sans-serif;
   line-height: normal;
+  font-weight: 300;
+  font-size: 2em;
 }
 
 a {
