--- a/_sass/tale/_variables.scss
+++ b/_sass/tale/_variables.scss
@@ -1,14 +1,14 @@
 // Colors
-$default-color: #000000!default;
+$default-color:  rgba(255, 255, 255, 0.87) !default;
 // $default-color: #555 !default;
-$default-shade: #000000 !default;
-$default-tint: #000000 !default;
+$default-shade: rgba(255, 255, 255, 0.87) !default;
+$default-tint: rgba(255, 255, 255, 0.87) !default;
 // $default-tint: #aaa !default;
 $grey-1: #979797 !default;
 $grey-2: #e5e5e5 !default;
 $grey-3: #f9f9f9 !default;
 $white: #fff !default;
-$blue: #4a9ae1 !default;
+$blue: #409cff !default;
 $shadow-color: rgba(0, 0, 0, 1) !default;
 $code-color: #bf616a !default;
 
